...
                    .keyboardType(.numberPad)
                    .font(.title2)
                    .padding(.horizontal)
                    .padding(.vertical)
                    .background(Color.gray.opacity(0.1))
                    .cornerRadius(10)
                    .accessibilityIdentifier("PhoneNumberTextField") // <- 加上 Identifier
                
                Spacer()
            }
            
            Spacer()
            
...
                .padding()
                .frame(maxWidth: .infinity)
                .background(isPhoneValid ? Color.green : Color.gray.opacity(0.5))  // <-- 依狀態切換顏色
                .cornerRadius(25)
                .foregroundColor(.white)
            }
            .accessibilityIdentifier("ContinueButton") // <- 加上 Identifier
            .padding(.horizontal)
            .padding(.bottom)
            .alert(isPresented: $showAlert) {
                Alert(
                    title: Text("請驗證你的手機號碼：\n\(selectedCountryCode) \(phoneNumber)"),
                    message: Text("我們需要驗證 \(selectedCountryCode) \(phoneNumber) 是你的手機號碼"),
                    primaryButton: .default(Text("確定"), action: {
                        // 記錄確認檢查手機號碼的事件
                        AnalyticsManager.shared.trackEvent("PhoneNumberEntry_CheckPhoneNumber", parameters: ["phone": "\(selectedCountryCode) \(phoneNumber)"])
                        checkPhoneNumber()
                    }),
                    secondaryButton: .cancel(Text("取消"))
                )
...
