...
                        .padding(.leading)
                }
                Spacer()
            }
            .padding(.top)
            
            Text("更換新密碼")
                .font(.title)
                .foregroundColor(.white)
            
            Text("密碼須不少於6個字符")
                .font(.body)
                .padding()
...
