...
            }) {
                Text("忘記密碼？")
                    .font(.headline)
                    .foregroundColor(.green)
                    .padding(.top)
            }
            .accessibilityIdentifier("ForgotPasswordButton") // <- 加上 Identifier

            Spacer()

            Button(action: loginUser) {
                HStack {
                    if isLoggingIn {
...
